--- a/config/config.ini
+++ b/config/config.ini
@@ -8,8 +8,8 @@ HttpPort = :3000
 Db = mysql
 DbHost = localhost
 DbPort = 3306
-DbUser = root
-DbPassWord = 123456
+DbUser = liu
+DbPassWord = liu
 DbName = ginblog
 
 
