--- a/config/config.ini
+++ b/config/config.ini
@@ -13,4 +13,9 @@ DbUser = root
 DbPassWord = 123456
 DbName = ginblog
 
+[qiniu]
+AccessKey  = lJw-e3rxV6tC9BrQpB8rg6_FvIgTR5M2mhslADGO
+SecretKey  = iZVy5xreZNV-4sZxAIZGF-zyhhmRvzI-uVjxTAGd
+Bucket     = ginblogmg
+QiniuServer  = http://qjtacbdjx.hd-bkt.clouddn.com/
 
