--- a/config/config.ini
+++ b/config/config.ini
@@ -14,8 +14,8 @@ DbPassWord = 123456
 DbName = ginblog
 
 [qiniu]
-AccessKey  = lJw-e3rxV6tC9BrQpB8rg6_FvIgTR5M2mhslADGO
-SecretKey  = iZVy5xreZNV-4sZxAIZGF-zyhhmRvzI-uVjxTAGd
+AccessKey  =
+SecretKey  =
 Bucket     = ginblogmg
 QiniuServer  = http://qjtacbdjx.hd-bkt.clouddn.com/
 
